--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
+		"better-auth": "^1.3.7",
 		"drizzle-orm": "^0.41.0",
 		"next": "^15.2.3",
 		"postgres": "^3.4.4",
