--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"devDependencies": {
 		"@better-auth/cli": "^1.3.7",
+		"@biomejs/biome": "2.2.2",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
