small fixes and linter fixes

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,29 +1,29 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true,
-  },
-  "files": { "ignoreUnknown": false, "includes": ["**"] },
-  "formatter": { "enabled": true, "indentWidth": 4 },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "nursery": {
-        "useSortedClasses": {
-          "level": "warn",
-          "fix": "safe",
-          "options": {
-            "functions": ["clsx", "cva", "cn"],
-          },
-        },
-      },
-      "recommended": true,
-    },
-    "domains": {
-      "next": "recommended",
-    },
-  },
+	"$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true
+	},
+	"files": { "ignoreUnknown": false, "includes": ["**"] },
+	"formatter": { "enabled": true, "indentWidth": 4 },
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"nursery": {
+				"useSortedClasses": {
+					"level": "warn",
+					"fix": "safe",
+					"options": {
+						"functions": ["clsx", "cva", "cn"]
+					}
+				}
+			},
+			"recommended": true
+		},
+		"domains": {
+			"next": "recommended"
+		}
+	}
 }
