--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,13 +1,13 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
-	"files": { "ignoreUnknown": false, "ignore": [] },
-	"formatter": { "enabled": true, "indentWidth": 2 },
-	"organizeImports": { "enabled": true },
+	"files": { "ignoreUnknown": false, "includes": ["**"] },
+	"formatter": { "enabled": true, "indentWidth": 4 },
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -21,6 +21,9 @@
 				}
 			},
 			"recommended": true
+		},
+		"domains": {
+			"next": "recommended"
 		}
 	}
 }
