--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "next build",
+		"build": "next build --turbopack",
 		"check": "biome check .",
 		"check:unsafe": "biome check --write --unsafe .",
 		"check:write": "biome check --write .",
@@ -19,16 +19,29 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.1",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@t3-oss/env-nextjs": "^0.12.0",
+		"better-auth": "^1.3.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
+		"lucide-react": "^0.542.0",
 		"next": "^15.2.3",
+		"next-themes": "^0.4.6",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"resend": "^6.0.1",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@better-auth/cli": "^1.3.7",
+		"@biomejs/biome": "2.2.2",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
@@ -36,6 +49,7 @@
 		"drizzle-kit": "^0.30.5",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.0.15",
+		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.8.2"
 	},
 	"ct3aMetadata": {
