--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.1",
 		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"better-auth": "^1.3.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
-		"lucide-react": "^0.542.0",
+		"lucide-react": "^0.544.0",
 		"next": "^15.2.3",
 		"next-themes": "^0.4.6",
 		"postgres": "^3.4.4",
