mock data and basic layout of dashboard homepage

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -20,7 +20,10 @@
 					}
 				}
 			},
-			"recommended": true
+			"recommended": true,
+			"performance": {
+				"noImgElement": "off"
+			}
 		},
 		"domains": {
 			"next": "recommended"
