feat: update example .env with new variables

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+# Better auth
+BETTER_AUTH_SECRET
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+DATABASE_URL=postgresql://neondb_owner:npg_oLSCkKV1G7nx@ep-rough-hall-addcqa2q-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+# Parameters for constructing your own connection string
+PGHOST=
+PGHOST_UNPOOLED=
+PGUSER=
+PGDATABASE=
+PGPASSWORD=
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/track"
-
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+POSTGRES_URL_NO_SSL=
+POSTGRES_PRISMA_URL=
