fix: formating in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Better auth
-BETTER_AUTH_SECRET
+BETTER_AUTH_SECRET=
 
 DATABASE_URL=postgresql://neondb_owner:npg_oLSCkKV1G7nx@ep-rough-hall-addcqa2q-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 
